--- a/index.html
+++ b/index.html
@@ -48,16 +48,15 @@
         So, I have developed the hazard map in Osu City, Ehime Prefecture using some GIS data created by the Geospatial Information Authority of Japan.
         I realized to put an interactive hazard map on the website using QGIS2web! Let's see the dynamic hazard map which you have never seen yet!
      </p>
+     <div class="a-div">
+      <p id="under-p">Some of the information is missing on my rented server, so please download the file from the following link</p>
+       <a href="https://github.com/Myxogastria0808/qgis2web" target="_blank"  rel="noopener noreferrer">
+           My GitHub Repository link
+       </a>
+    </div>
      <div class="youtube">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/GwC8YU3UmuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-
-     <div class="a-div">
-       <p id="under-p">Some of the information is missing on my rented server, so please download the file from the following link</p>
-        <a href="https://github.com/Myxogastria0808/qgis2web" target="_blank"  rel="noopener noreferrer">
-            Please click here!
-        </a>
-     </div>
    </div>
 </body>
 </html>
