--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    <div class="padding-div"></div>
 
    <div class="width">
-    <h2>Whai is my creation</h2>
+    <h2>What is my creation</h2>
     <p>
        I developed a GIS map of the flood damage of July, 2008.
        I use QGIS and QGIS2Web. QGIS is one of the FOSS4G stands for Free Open-Source Software for GeoSpatial.
@@ -42,11 +42,11 @@
      <h2>The hazard map using QGIS</h2>
      <p>
         In July 2008, Japan experienced a major rainstorm disaster.
-        Many people were affected by this disaster.
-        Japan has experienced many flood disasters like this to data.
+        Many people were affected by this.
+        Japan has historically experienced many flood disasters like this.
         To prepare for future floods, we must learn from the past disaster records.
         So, I have developed the hazard map in Osu City, Ehime Prefecture using some GIS data created by the Geospatial Information Authority of Japan.
-        I realized to put an interactive hazard map on the website using QGIS2web! Let's see the dynamic hazard map which you have never seen yet!
+        I realized to put an interactive hazard map on the website using QGIS2web! Let's see the dynamic hazard map which has whole new concept!
      </p>
      <div class="a-div">
       <p id="under-p">Some of the information is missing on my rented server, so please download the file from the following link</p>
