--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
         I realized to put an interactive hazard map on the website using QGIS2web! Let's see the dynamic hazard map which has whole new concept!
      </p>
      <div class="a-div">
-      <p id="under-p">Some of the information is missing on my rented server, so please download the file from the following link</p>
-       <a href="https://github.com/Myxogastria0808/qgis2web" target="_blank"  rel="noopener noreferrer">
-           My GitHub Repository link
-       </a>
+      <a href="https://myxogastria0808.github.io/qgis2web/flood_damage_division/qgis2web_2021_12_11-15_40_58_918445/index.html#13/33.5276/132.5792" target="_blank"  rel="noopener noreferrer">
+        The hazard map link
+      </a>
+      <p id="under-p">*Some of the information is missing on my rented server, so please download the file from the following link</p>
+      <a href="https://github.com/Myxogastria0808/qgis2web" target="_blank"  rel="noopener noreferrer">
+           My GitHub repository link
+      </a>
     </div>
      <div class="youtube">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/GwC8YU3UmuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
