--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
    <div class="padding-div"></div>
 
    <div class="width">
-    <h2>What is my creation</h2>
+    <h2>What the Map Is All About</h2>
     <p>
        I developed a GIS map of the flood damage of July, 2008.
        I use QGIS and QGIS2Web. QGIS is one of the FOSS4G stands for Free Open-Source Software for GeoSpatial.
        QGIS2Web is a plug-in of QGIS to release the Internet.
      </p>
-     <h2>The hazard map using QGIS</h2>
+     <h2>The Hazard Map Using QGIS</h2>
      <p>
         In July 2008, Japan experienced a major rainstorm disaster.
         Many people were affected by this.
