--- a/index.html
+++ b/index.html
@@ -49,13 +49,31 @@
         I realized to put an interactive hazard map on the website using QGIS2web! Let's see the dynamic hazard map which has whole new concept!
      </p>
      <div class="a-div">
-      <a href="https://myxogastria0808.github.io/qgis2web/flood_damage_division/qgis2web_2021_12_11-15_40_58_918445/index.html#13/33.5276/132.5792" target="_blank"  rel="noopener noreferrer">
-        The hazard map link
+      <a href="https://qgis2web-flood-damage.herokuapp.com/" target="_blank"  rel="noopener noreferrer">
+        <span class="neon flash">[<span>[</span></span>
+        <span class="neon flash">T<span>T</span></span>
+        <span class="neon flash">h<span>h</span></span>
+        <span class="neon flash">e<span>e</span></span>
+        <span class="neon flash"><span></span></span>
+        <span class="neon flash">H<span>H</span></span>
+        <span class="neon flash">a<span>a</span></span>
+        <span class="neon flash">z<span>z</span></span>
+        <span class="neon flash">a<span>a</span></span>
+        <span class="neon flash">r<span>r</span></span>
+        <span class="neon flash">d<span>d</span></span>
+        <span class="neon flash"><span></span></span>
+        <span class="neon flash">M<span>M</span></span>
+        <span class="neon flash">a<span>a</span></span>
+        <span class="neon flash">p<span>p</span></span>
+        <span class="neon flash"><span></span></span>
+        <span class="neon flash">L<span>L</span></span>
+        <span class="neon flash">i<span>i</span></span>
+        <span class="neon flash">n<span>n</span></span>
+        <span class="neon flash">k<span>k</span></span>
+        <span class="neon flash">]<span>]</span></span>
       </a>
-      <p id="under-p">*Some of the information is missing on my rented server, so please download the file from the following link</p>
-      <a href="https://github.com/Myxogastria0808/qgis2web" target="_blank"  rel="noopener noreferrer">
-           My GitHub repository link
-      </a>
+      <br>
+      <br>
     </div>
      <div class="youtube">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/GwC8YU3UmuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
