--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
         <span class="neon flash">n<span>n</span></span>
         <span class="neon flash">k<span>k</span></span>
         <span class="neon flash">]<span>]</span></span>
+        <br>
+        <span class="neon flash">C<span>C</span></span>
+        <span class="neon flash">l<span>l</span></span>
+        <span class="neon flash">i<span>i</span></span>
+        <span class="neon flash">c<span>c</span></span>
+        <span class="neon flash">k<span>k</span></span>
+        <span class="neon flash"><span></span></span>
+        <span class="neon flash">H<span>H</span></span>
+        <span class="neon flash">e<span>e</span></span>
+        <span class="neon flash">r<span>r</span></span>
+        <span class="neon flash">e<span>e</span></span>
+        <span class="neon flash">!<span>!</span></span>
       </a>
       <br>
       <br>
