--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         I realized to put an interactive hazard map on the website using QGIS2web! Let's see the dynamic hazard map which has whole new concept!
      </p>
      <div class="a-div">
-      <a href="https://qgis2web-flood-damage.herokuapp.com/" target="_blank"  rel="noopener noreferrer">
+      <a href="https://qgis2web-b9700.web.app/" target="_blank"  rel="noopener noreferrer">
         <span class="neon flash">[<span>[</span></span>
         <span class="neon flash">T<span>T</span></span>
         <span class="neon flash">h<span>h</span></span>
